cambios en el registro

--- a/app/index.html
+++ b/app/index.html
@@ -67,6 +67,7 @@
   <!-- BEGIN HEADER-->
   <div ui-view="loginview"></div>
   <div ui-view="homeview"></div>
+  <div ui-view="signinview"></div>
 
   <!-- build:js(.) scripts/vendor.js -->
   <!-- bower:js -->
@@ -124,6 +125,7 @@
   <script src="scripts/controllers/main.js"></script>
   <script src="scripts/controllers/home/home.js"></script>
   <script src="scripts/controllers/login/login.js"></script>
+  <script src="scripts/controllers/signIn/signinCtrl.js"></script>
   <script src="scripts/controllers/dashboard/module.js"></script>
   <script src="scripts/controllers/dashboard/dashboardCtrl.js"></script>
   <script src="scripts/factories/authFactory.js"></script>
