--- a/app/index.html
+++ b/app/index.html
@@ -68,6 +68,7 @@
   <div ui-view="loginview"></div>
   <div ui-view="homeview"></div>
   <div ui-view="signinview"></div>
+  <div ui-view="recoverview"></div>
 
   <!-- build:js(.) scripts/vendor.js -->
   <!-- bower:js -->
@@ -126,6 +127,7 @@
   <script src="scripts/controllers/home/home.js"></script>
   <script src="scripts/controllers/login/login.js"></script>
   <script src="scripts/controllers/signIn/signinCtrl.js"></script>
+   <script src="scripts/controllers/signIn/recoverCtrl.js"></script>
   <script src="scripts/controllers/dashboard/module.js"></script>
   <script src="scripts/controllers/dashboard/dashboardCtrl.js"></script>
   <script src="scripts/factories/authFactory.js"></script>
