terminando password recovery

--- a/app/index.html
+++ b/app/index.html
@@ -115,6 +115,9 @@
   <script src="bower_components/angular-bootstrap-colorpicker/js/bootstrap-colorpicker-module.js"></script>
   <script src="bower_components/moment/moment.js"></script>
   <script src="bower_components/angular-moment/angular-moment.js"></script>
+  <script src="bower_components/angular-password/angular-password.js"></script>
+  <script src="bower_components/angular-validation-match/dist/angular-validation-match.min.js"></script>
+  <script src="bower_components/angular-recaptcha/release/angular-recaptcha.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
 
