--- a/app/index.html
+++ b/app/index.html
@@ -125,6 +125,8 @@
   <script src="scripts/app.js"></script>
   <script src="scripts/global.js"></script>
   <script src="scripts/modules.js"></script>
+  
+  <script src="scripts/controllers/signIn/ayudaCtrl.js"></script>
   <script src="scripts/factories/authFactory.js"></script>
   <script src="scripts/factories/inMenu.js"></script>
   <script src="scripts/components/multiSelect.js"></script>
